--- a/views/admin/pages/product-category/index.pug
+++ b/views/admin/pages/product-category/index.pug
@@ -10,6 +10,7 @@ include ../../mixins/table-tree.pug
 block main
   +alert-success(5000)
 
+  if(role.permissions.includes("products-category_view"))
 
     h1(class="test") Danh mục sản phẩm
 
