--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -8,7 +8,20 @@ header.header
           a(href="/")
             img(src="/images/logo.jfif")
       
-      .col-9
+      .col-5 
+        form(
+          action="/search"
+          method="POST"
+        )
+          div(class="form-group d-flex mb-0")
+            input(
+              type="text"
+              placeholder="Nhập từ khóa ..."
+              class="form-control"
+              name="keyword"
+            )
+
+      .col-4
         .inner-menu
           ul(class="flex")
             li
@@ -17,16 +30,3 @@ header.header
               -const pathProduct = "/products"
               a(href="/products" ) Sản phẩm 
               +sub-menu(layoutProductsCategory, pathProduct)
-              //- ul 
-              //-   li 
-              //-     a(href="/product/slug1") Mục 1
-              //-     ul 
-              //-       li 
-              //-         a(href="/product/slug1-1") Mục 1-1
-              //-       li 
-              //-         a(href="/product/slug1-2") Mục 1-2
-              //-         ul 
-              //-           li 
-              //-             a(href="/product/slug1-1") Mục 1-2-1
-              //-           li 
-              //-             a(href="/product/slug1-2") Mục 1-2-2
