--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -20,6 +20,10 @@ header.header
               class="form-control"
               name="keyword"
             )
+            button(
+              type="submit"
+              class="btn btn-primary"
+            ) Tìm
 
       .col-4
         .inner-menu
