--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -11,7 +11,7 @@ header.header
       .col-5 
         form(
           action="/search"
-          method="POST"
+          method="GET"
         )
           div(class="form-group d-flex mb-0")
             input(
