--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -19,6 +19,7 @@ header.header
               placeholder="Nhập từ khóa ..."
               class="form-control"
               name="keyword"
+              value=keyword
             )
             button(
               type="submit"
