--- a/views/client/pages/search/index.pug
+++ b/views/client/pages/search/index.pug
@@ -1,5 +1,6 @@
 extends ../../layouts/default.pug
 include ../../mixins/box-head.pug
+include ../../mixins/products-layout.pug
 
 block main
   .container 
@@ -7,3 +8,5 @@ block main
       .col-12 
         .box-head
           +box-head("Kết quả tìm kiếm")
+    
+    +product-grid(products)
