--- a/views/client/pages/products/detail.pug
+++ b/views/client/pages/products/detail.pug
@@ -3,6 +3,8 @@ include ../../mixins/box-head.pug
 include ../../mixins/alert.pug
 
 block main
+  +alert-success(2000)
+  
   if(product.categoryProduct.title )
     a(href=`/products/${product.categoryProduct.slug}`) #{product.categoryProduct.title}
   if(product.title)
