--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -35,3 +35,5 @@ header.header
               -const pathProduct = "/products"
               a(href="/products" ) Sản phẩm 
               +sub-menu(layoutProductsCategory, pathProduct)
+            li 
+              a(href="/cart")
