--- a/views/client/partials/header.pug
+++ b/views/client/partials/header.pug
@@ -36,4 +36,4 @@ header.header
               a(href="/products" ) Sản phẩm 
               +sub-menu(layoutProductsCategory, pathProduct)
             li 
-              a(href="/cart")
+              a(href="/cart") Giỏ hàng (0)
