--- a/views/client/pages/cart/index.pug
+++ b/views/client/pages/cart/index.pug
@@ -13,3 +13,20 @@ block main
 
     .row 
       .col-12
+        table(class="table table-bordered")
+          thead
+            tr 
+              th STT 
+              th Ảnh 
+              th Tên 
+              th Giá
+              th Số lượng
+              th Tổng tiền 
+              th Hành động
+          tbody 
+            tr
+              td
+              td 
+                img(src="", width="80px")
+              td
+                a(href="")
