--- a/views/client/pages/cart/index.pug
+++ b/views/client/pages/cart/index.pug
@@ -29,4 +29,20 @@ block main
               td 
                 img(src="", width="80px")
               td
-                a(href="")
+                a(href=`products/detail/:id`) Sản phẩm 1
+              td 500$
+              td  
+                input(
+                  type="number"
+                  name="quantity"
+                  value="1"
+                  min="1"
+                  max="1"
+                  item-id=""
+                  style="width: 60px"
+                )
+              td 1000$
+              td
+                a(
+                  href=""
+                )
