--- a/views/client/pages/cart/index.pug
+++ b/views/client/pages/cart/index.pug
@@ -24,33 +24,36 @@ block main
               th Tổng tiền 
               th Hành động
           tbody 
-            tr
-              td
-              td 
-                img(src="", width="80px")
-              td
-                a(href=`products/detail/:id`) Sản phẩm 1
-              td 500$
-              td  
-                input(
-                  type="number"
-                  name="quantity"
-                  value="1"
-                  min="1"
-                  max="1"
-                  item-id=""
-                  style="width: 60px"
-                )
-              td 1000$
-              td
-                a(
-                  href=`/cart/delete/:id`
-                  class="btn btn-danger"
-                ) Xóa
-        h3(class="text-right") Tổng đơn hàng: 1000$
+            if(cartDetail.products.length > 0)
+              each item, index in cartDetail.products
+                tr
+                  td #{index+1}
+                  td 
+                    img(src=item.productInfo.thumbnail, width="80px" height="80px")
+                  td
+                    a(href=`products/detail/${item.productInfo.slug}`) #{item.productInfo.title}
+                  td 500$
+                  td  
+                    input(
+                      type="number"
+                      name="quantity"
+                      value=item.quantity
+                      min="1"
+                      max="1"
+                      product-id=item.product_id
+                      style="width: 60px"
+                    )
+                  td 1000$
+                  td
+                    a(
+                      href=`/cart/delete/${item.product_id}`
+                      class="btn btn-danger"
+                    ) Xóa
+            else
+        h3(class="text-end") Tổng đơn hàng: 1000$
 
-        div(class="text-right mt-3")
+        div(class="text-end mt-3")
           a(
             href="/checkout"
             class="btn btn-success"
-          )
+          ) Thanh toán
