--- a/views/client/pages/cart/index.pug
+++ b/views/client/pages/cart/index.pug
@@ -50,7 +50,7 @@ block main
                       class="btn btn-danger"
                     ) Xóa
             else
-        h3(class="text-end") Tổng đơn hàng: 1000$
+        h3(class="text-end") Tổng đơn hàng: #{cartDetail.totalFullProduct}$
 
         div(class="text-end mt-3")
           a(
