--- a/views/client/pages/cart/index.pug
+++ b/views/client/pages/cart/index.pug
@@ -39,7 +39,7 @@ block main
                       name="quantity"
                       value=item.quantity
                       min="1"
-                      max=item.stock
+                      max=item.productInfo.stock
                       product-id=item.product_id
                       style="width: 60px"
                     )
